force-app/main/default/objects/Addr_Verification_Settings__c/Addr_Verification_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for automatic address verification and normalization.</description>
    <label>Address Verification Settings</label>
</CustomObject>