force-app/main/default/objects/Addr_Verification_Settings__c/fields/Address_Verification_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Endpoint__c</fullName>
    <description>Address Verification URL</description>
    <inlineHelpText>URL used for address verification.</inlineHelpText>
    <label>Address Verification URL</label>
    <type>Url</type>
</CustomField>