force-app/main/default/objects/Addr_Verification_Settings__c/fields/Auth_ID__c.field-meta.xml
<CustomField>
    <fullName>Auth_ID__c</fullName>
    <description>Auth ID</description>
    <inlineHelpText>The Authentication ID.</inlineHelpText>
    <label>Auth ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>