force-app/main/default/objects/Addr_Verification_Settings__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <description>Auth Token</description>
    <inlineHelpText>The Authentication Token.</inlineHelpText>
    <label>Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>