force-app/main/default/objects/Addr_Verification_Settings__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Verification Service</description>
    <inlineHelpText>Salesforce class responsible for contacting the web service and verifying addresses.</inlineHelpText>
    <label>Verification Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>