force-app/main/default/objects/Addr_Verification_Settings__c/fields/Enable_Automatic_Verification__c.field-meta.xml
<CustomField>
    <fullName>Enable_Automatic_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Automatic Verification</description>
    <inlineHelpText>Enables automatic address verification for new addresses.</inlineHelpText>
    <label>Enable Automatic Verification</label>
    <type>Checkbox</type>
</CustomField>