force-app/main/default/objects/Addr_Verification_Settings__c/fields/Prevent_Address_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Address_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent Address Overwrite Checkbox</description>
    <inlineHelpText>Prevents the Cicero API from overwriting Addresses during verification.</inlineHelpText>
    <label>Prevent Address Overwrite</label>
    <type>Checkbox</type>
</CustomField>