force-app/main/default/objects/Addr_Verification_Settings__c/fields/Reject_Ambiguous_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Reject_Ambiguous_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reject Ambiguous Addresses</description>
    <inlineHelpText>Marks ambiguous addresses as invalid, when the API returns more than one address. If left unselected, Salesforce will accept the first suggested address as the valid address.</inlineHelpText>
    <label>Reject Ambiguous Addresses</label>
    <type>Checkbox</type>
</CustomField>