force-app/main/default/objects/Addr_Verification_Settings__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Callout timeout in seconds.</description>
    <inlineHelpText>Callout timeout in seconds.</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>