force-app/main/default/objects/Addr_Verification_Settings__c/fields/Using_SmartyStreets__c.field-meta.xml
<CustomField>
    <fullName>Using_SmartyStreets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether or not you are using the SmartyStreets address verification service.</description>
    <inlineHelpText>Specifies whether or not you are using the SmartyStreets address verification service.</inlineHelpText>
    <label>DEPRECATED - Using SmartyStreets</label>
    <type>Checkbox</type>
</CustomField>