force-app/main/default/objects/Addr_Verification_Settings__c/fields/Zipcode_Verification_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Zipcode_Verification_Endpoint__c</fullName>
    <description>Zipcode Verification URL</description>
    <inlineHelpText>URL used for zip code verification.</inlineHelpText>
    <label>Zipcode Verification Endpoint</label>
    <type>Url</type>
</CustomField>